# addons

./: CMakeLists.txt
tensorflow_addons/custom_ops/layers/: BUILD
tensorflow_addons/custom_ops/layers/cc/kernels/: deformable_conv2d_op.cc  deformable_conv2d_op.h  deformable_conv2d_op_gpu.cu
tensorflow_addons/custom_ops/layers/cc/ops/: deformable_conv2d_op.cc
tensorflow_addons/layers/: deformable_conv2d.py
tensorflow_addons/layers/tests/: deformable_conv2d_test.py
